# django-book

./: .gitignore  LICENSE  main.py  pyproject.toml
samplesite/bboard/: models.py  tests.py  urls.py  views.py
samplesite/bboard/migrations/: 0001_initial.py
samplesite/bboard/templates/bboard/: index.html
samplesite/samplesite/: settings.py  urls.py
