[project]
name = "django-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django~=4.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"

#рекомендуется по pep8
indent-style = "space" 

docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "A", "C", "T"]
# ignore = []
